--- a/src/app/components/customers/card-views/card-views.component.css
+++ b/src/app/components/customers/card-views/card-views.component.css
@@ -12,3 +12,10 @@ a:hover{
 a{
   font-size: 20px;
 }
+h1,h2{
+  color: white;
+}
+.wrapper-top{
+  display: flex;
+  justify-content: space-between;
+}
