--- a/src/app/components/customers/info/add/add.component.html
+++ b/src/app/components/customers/info/add/add.component.html
@@ -1,1 +1,61 @@
-<p>add works!</p>
+<div class="container">
+  <div class="row mt-4">
+    <div class="col-sm-6">
+      <form>
+        <div class="form-group">
+          <label for="firstName">First Name</label>
+          <input
+          type="email"
+          class="form-control mb-4"
+          id="firstName"
+          placeholder="Enter First Name">
+        </div>
+        <!-- end first name  -->
+        <div class="form-group">
+          <label for="lastName">Last Name</label>
+          <input
+          type="email"
+          class="form-control mb-4"
+          id="lastName"
+          placeholder="Enter Last Name">
+        </div>
+        <!-- end last name  -->
+        <div class="form-group">
+          <label for="address">Address</label>
+          <input
+          type="address"
+          class="form-control mb-4"
+          id="address"
+          placeholder="Enter Address">
+        </div>
+          <!-- end address  -->
+        <div class="form-group">
+          <label for="city">City</label>
+          <input
+          type="text"
+          class="form-control mb-4"
+          id="city"
+          placeholder="Enter City">
+        </div>
+          <!-- end city  -->
+        <div class="form-group">
+          <label for="state">State</label>
+          <input
+          type="text"
+          class="form-control mb-4"
+          id="state"
+          placeholder="Enter State">
+        </div>
+          <!-- end state  -->
+        <div class="button-group mt-3">
+          <div></div>
+          <div class="button-gr-right">
+            <button type="button" class="btn btn-light">Cancel</button>
+            <button type="button" class="btn btn-success">Insert</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
