--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,18 +1,33 @@
-<div class="row">
-  <div class="col-sm-12">
-    <div class="form-group">
-      <label for="email">E-Mail</label>
-      <input type="email" id="email" class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" id="password" class="form-control">
-    </div>
-    <div>
-      <button class="btn btn-primary">Sign Up</button>
-    </div>
-    <div>
-      <button class="btn btn-primary">Switch to Login</button>
-    </div>
+<div class="row mt-5">
+  <div class="col-sm-5">
+    <form #f="ngForm" (ngSubmit)="onSubmit(f.value)" novalidate >
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input
+        type="email"
+        class="form-control"
+        id="exampleInputEmail1"
+        aria-describedby="emailHelp"
+        placeholder="Enter email"
+        required
+        name="email"
+        [(ngModel)]="email"
+        >
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input
+        type="password"
+        class="form-control"
+        id="exampleInputPassword1"
+        placeholder="Password"
+        required
+        name="password"
+        [(ngModel)]="password"
+        >
+      </div>
+      <button type="submit" class="btn btn-primary mt-3">Login</button>
+    </form>
   </div>
 </div>
