--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -13,4 +13,11 @@
     </ng-template>
     <app-list-views [users]="customerData"></app-list-views>
   </mat-tab>
+  <mat-tab label="List View">
+    <ng-template mat-tab-label>
+      <i class="fas fa-edit"></i>
+      New Customer
+    </ng-template>
+    <app-add></app-add>
+  </mat-tab>
 </mat-tab-group>
