--- a/src/app/components/customers/info/details/details.component.css
+++ b/src/app/components/customers/info/details/details.component.css
@@ -11,3 +11,10 @@ img{
 a{
   margin-top: 70px;
 }
+h1,h2:first-child{
+  color: white;
+  margin-top: 15px;
+}
+.card-title{
+  color: black!important;
+}
