--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,11 +10,11 @@
             <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/customers']">Customer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"  routerLinkActive="active">Settings</a>
+            <a class="nav-link" href="#"  routerLinkActive="active" routerLink="setting">Settings</a>
           </li>
         </ul>
         <form class="d-flex">
-          <button class="btn btn-outline-secondary" type="submit">Login</button>
+          <button class="btn btn-outline-secondary" type="submit" routerLink="/login">Login</button>
         </form>
       </div>
     </div>
